kubernetes-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reindeer-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: reindeer-app
