kubernetes-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: reindeer-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: reindeer-service
              servicePort: 8080
